finished team section

--- a/nft-launch/styles/globals.css
+++ b/nft-launch/styles/globals.css
@@ -15,24 +15,22 @@ a {
   box-sizing: border-box;
 }
 /* import google fonts  */
-@import url('https://fonts.googleapis.com/css2?family=Alef&family=Catamaran:wght@100&family=Fuzzy+Bubbles&family=Inter:wght@600&family=Lato:ital,wght@1,300&family=Manrope:wght@300;400&family=Montserrat:wght@500&family=Open+Sans:wght@300&family=PT+Sans&family=Poppins:ital,wght@0,100;0,300;1,400&family=Praise&family=Raleway:wght@100;400&family=Roboto+Slab:wght@100;200&family=Source+Sans+Pro&family=Space+Mono:ital@1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alef&family=Catamaran:wght@100&family=Fuzzy+Bubbles&family=Inter:wght@600&family=Lato:ital,wght@1,300&family=Manrope:wght@300;400&family=Montserrat:wght@500&family=Open+Sans:wght@300&family=PT+Sans&family=Poppins:ital,wght@0,100;0,300;1,400&family=Praise&family=Raleway:wght@100;400&family=Roboto+Slab:wght@100;200&family=Source+Sans+Pro&family=Space+Mono:ital@1&display=swap");
 /* tailwind CSS styling */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-
   .roadmap {
-    @apply before:content-[''] bg-red-400 absolute -left-3 w-[2rem]
+    @apply before:content-[''] bg-red-400 absolute -left-3 w-[2rem];
   }
 
   .navItem {
-    @apply font-semibold text-white px-4 font-manrope text-base py-3 md:py-0
+    @apply font-semibold text-white px-4 font-manrope text-base py-3 md:py-0 hover:text-[#E5A301] hover:cursor-pointer duration-300
   }
 
   .iconItem {
-    @apply bg-white rounded-md p-2 mr-3
+    @apply bg-white rounded-md p-2 mr-3 hover:bg-[#E5A301] hover:text-white hover:cursor-pointer duration-500;
   }
-
 }
